hubSide/force-app/main/default/objects/Paiement_Versement__c/Paiement_Versement__c.object-meta.xml
<CustomObject>
    <label>Paiement Versement</label>
    <nameField>
        <label>Paiement Versement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paiement Versement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>