hubSide/force-app/main/default/objects/Paiement_Versement__c/fields/BAppliEventId__c.field-meta.xml
<CustomField>
    <fullName>BAppliEventId__c</fullName>
    <externalId>true</externalId>
    <label>BAppliEventId</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>