hubSide/force-app/main/default/objects/Paiement_Versement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Paiement Versement</relationshipLabel>
    <relationshipName>Paiement_Versement</relationshipName>
    <type>Lookup</type>
</CustomField>