hubSide/force-app/main/default/objects/Paiement_Versement__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>Date of payment executed in B-Appli and updated via the MuleSoft integration</description>
    <label>Date de réalisation</label>
    <type>Date</type>
</CustomField>