hubSide/force-app/main/default/objects/Paiement_Versement__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande Paiement</fullName>
            </value>
            <value>
                <fullName>Payé Client</fullName>
            </value>
            <value>
                <fullName>Demande Versement</fullName>
            </value>
            <value>
                <fullName>Versé Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>